--- a/templates/src/dotnet.scss
+++ b/templates/src/dotnet.scss
@@ -45,6 +45,11 @@ article {
   span.languagekeyword {
     font-weight: bold;
   }
+
+  .divider {
+    margin: 0 5px;
+    color: #ccc;
+  }  
 }
 
 /* These are not important, tune down **/
