--- a/templates/src/highlight.scss
+++ b/templates/src/highlight.scss
@@ -3,20 +3,6 @@
  * Licensed under the MIT License. See License.txt in the project root for license information.
 */
 
-.hljs {
-  display: inline;
-  background-color: inherit;
-  padding: 0;
-}
-
-.hljs-keyword {
-  color: rgb(86 156 214);
-}
-
-.hljs-string {
-  color: rgb(214 157 133);
-}
-
 pre > code .line-highlight {
-  background-color: #ffc;
+  background-color: yellow;
 }
